--- a/careers.html
+++ b/careers.html
@@ -73,10 +73,8 @@
 						<li class="menu-link menu-item-has-children">
 							<a href="javascript:void(0)">Resources</a>
 							<ul class="sub-menu">
-								<li class="menu-link"><a href="#">Resource 1</a></li>
-								<li class="menu-link"><a href="#">Resource 2</a></li>
-								<li class="menu-link"><a href="#">Resource 3</a></li>
-								<li class="menu-link"><a href="#">Resource 4</a></li>
+								<li class="menu-link"><a href="./news.html">News & Media</a></li>
+								<li class="menu-link"><a href="./careers.html">Careers</a></li>
 							</ul>
 						</li>
 
@@ -128,10 +126,8 @@
 					<li class="menu-link menu-item-has-children">
 						<a href="javascript:void(0)">Resources</a>
 						<ul class="sub-menu">
-							<li class="menu-link"><a href="#">Resource 1</a></li>
-							<li class="menu-link"><a href="#">Resource 2</a></li>
-							<li class="menu-link"><a href="#">Resource 3</a></li>
-							<li class="menu-link"><a href="#">Resource 4</a></li>
+							<li class="menu-link"><a href="./news.html">News & Media</a></li>
+							<li class="menu-link"><a href="./careers.html">Careers</a></li>
 						</ul>
 					</li>
 
@@ -233,11 +229,84 @@
 					class="bg-image absolute top-0 left-0 w-full h-full" />
 				<div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
-				<a href="#" class="play-btn absolute flex flex-col items-center justify-center"><img src="./assets/images/play btn.png" alt="play-btn"><p>Play Me</p></a>
+				<a href="#" target="_blank" class="play-btn absolute flex flex-col items-center justify-center"><img src="./assets/images/play btn.png" alt="play-btn"><p>Play Me</p></a>
 
 				<div class="container">
 					<h2>A Glimpse of Equity Afia Work Life</h2>
 					<p class="lg:mt-4 mt-2">Lorem ipsum dolor sit amet consectetur. Orci adipiscing mi facilisi augue diam. Feugiat facilisi habitant quis tincidunt. Auctor at consectetur a neque aliquam. Aliquet eu tellus vestibulum tempus tortor proin. Enim blandit sem arcu sed neque nisl massa elit. Lorem neque eros dolor vitae feugiat egestas diam bibendum. Sit tortor non sit condimentum egestas quis vitae mi erat. Congue habitant elementum ornare consectetur. Vitae facilisi elit volutpat faucibus tristique sagittis. Molestie felis maecenas quam sodales vel quam ullamcorper eget.</p>
+				</div>
+			</section>
+
+			<!--Vacancies Section-->
+			<section id="vacancies">
+				<div class="container">
+					<div class="filter-section flex justify-between items-end lg:mb-6 mb-4">
+						<div class="desc space-y-2">
+							<h2>Open Vacancies</h2>
+							<p class="intro">
+							Lorem ipsum dolor sit amet consectetur. Arcu pretium platea cursus accumsan. Pretium morbi aliquet gravida id. Sapien quisque phasellus egestas sem potenti et 
+						</p>
+						</div>
+
+						<div class="filter-items flex items-center">
+							<h6 class="lg:mr-8 md:mr-6 mr-4">Filter By</h6>
+							<div class="items flex items-center">
+								<span class="item flex items-center">
+									<p class="mr-2">Country</p>
+									<i class="fas fa-angle-down"></i>
+								</span>
+								<span class="item flex items-center">
+									<p>Filter</p>
+								</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="vacancy-grid grid grid-cols-1 gap-4 lg:gap-8 lg:grid-cols-4 md:grid-cols-2">
+						<div class="vacancy flex flex-col justify-between">
+							<h6>Community Oral Health Officer (COHO)</h6>
+							<span class="space-x-2 flex items-center lg:my-4 my-2">
+								<img src="./assets/images/location-pin.png" alt="pin">
+								<p>Kenya, Ruiru</p>
+							</span>
+							<a href="#" class="btn-sm about-us flex items-center self-end"
+									>Details <img src="./assets/images/arrow-circle-light.png" alt="arrow-circle"
+								/></a>
+						</div>
+
+						<div class="vacancy flex flex-col justify-between">
+							<h6>Optometrist</h6>
+							<span class="space-x-2 flex items-center lg:my-4 my-2">
+								<img src="./assets/images/location-pin.png" alt="pin">
+								<p>Kenya, Ruiru</p>
+							</span>
+							<a href="#" class="btn-sm about-us flex items-center self-end"
+									>Details <img src="./assets/images/arrow-circle-light.png" alt="arrow-circle"
+								/></a>
+						</div>
+
+						<div class="vacancy flex flex-col justify-between">
+							<h6>Pharmaceutical Technologist</h6>
+							<span class="space-x-2 flex items-center lg:my-4 my-2">
+								<img src="./assets/images/location-pin.png" alt="pin">
+								<p>Kenya, Ruiru</p>
+							</span>
+							<a href="#" class="btn-sm about-us flex items-center self-end"
+									>Details <img src="./assets/images/arrow-circle-light.png" alt="arrow-circle"
+								/></a>
+						</div>
+
+						<div class="vacancy flex flex-col justify-between">
+							<h6>Business Development Officer</h6>
+							<span class="space-x-2 flex items-center lg:my-4 my-2">
+								<img src="./assets/images/location-pin.png" alt="pin">
+								<p>Kenya, Ruiru</p>
+							</span>
+							<a href="#" class="btn-sm about-us flex items-center self-end"
+									>Details <img src="./assets/images/arrow-circle-light.png" alt="arrow-circle"
+								/></a>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
