--- a/news.html
+++ b/news.html
@@ -73,10 +73,8 @@
 						<li class="menu-link menu-item-has-children">
 							<a href="javascript:void(0)">Resources</a>
 							<ul class="sub-menu">
-								<li class="menu-link"><a href="#">Resource 1</a></li>
-								<li class="menu-link"><a href="#">Resource 2</a></li>
-								<li class="menu-link"><a href="#">Resource 3</a></li>
-								<li class="menu-link"><a href="#">Resource 4</a></li>
+								<li class="menu-link"><a href="./news.html">News & Media</a></li>
+								<li class="menu-link"><a href="./careers.html">Careers</a></li>
 							</ul>
 						</li>
 
@@ -128,10 +126,8 @@
 					<li class="menu-link menu-item-has-children">
 						<a href="javascript:void(0)">Resources</a>
 						<ul class="sub-menu">
-							<li class="menu-link"><a href="#">Resource 1</a></li>
-							<li class="menu-link"><a href="#">Resource 2</a></li>
-							<li class="menu-link"><a href="#">Resource 3</a></li>
-							<li class="menu-link"><a href="#">Resource 4</a></li>
+							<li class="menu-link"><a href="./news.html">News & Media</a></li>
+							<li class="menu-link"><a href="./careers.html">Careers</a></li>
 						</ul>
 					</li>
 
