Mobile Resp Complete

--- a/careers.html
+++ b/careers.html
@@ -240,7 +240,7 @@
 			<!--Vacancies Section-->
 			<section id="vacancies">
 				<div class="container">
-					<div class="filter-section flex justify-between items-end lg:mb-6 mb-4">
+					<div class="filter-section flex flex-col lg:flex-row md:flex-row lg:justify-between lg:items-end lg:mb-6 mb-4">
 						<div class="desc space-y-2">
 							<h2>Open Vacancies</h2>
 							<p class="intro">
@@ -248,7 +248,7 @@
 						</p>
 						</div>
 
-						<div class="filter-items flex items-center">
+						<div class="filter-items flex flex-col lg:flex-row md:flex-row lg:items-center">
 							<h6 class="lg:mr-8 md:mr-6 mr-4">Filter By</h6>
 							<div class="items flex items-center">
 								<span class="item flex items-center">
