--- a/partners.html
+++ b/partners.html
@@ -168,7 +168,7 @@
 							adipiscing elementum imperdiet suspendisse lectus.
 						</p>
 
-						<div class="filter-items flex items-center">
+						<div class="filter-items flex flex-col lg:flex-row md:flex-row lg:items-center">
 							<h6 class="lg:mr-12 md:mr-6 mr-4">Filter By</h6>
 							<div class="items flex items-center">
 								<span class="item flex items-center">
@@ -182,7 +182,7 @@
 						</div>
 					</div>
 
-					<div class="partners grid lg:grid-cols-6 md:grid-cols-4 grid-cols-2 gap-2 mt-8">
+					<div class="partners grid lg:grid-cols-6 md:grid-cols-4 grid-cols-1 gap-2 mt-8">
 						<img src="./assets/images/partner 1.png" alt="partner-image" class="partner" />
 						<img src="./assets/images/partner 2.jpg" alt="partner-image" class="partner" />
 						<img src="./assets/images/partner 3.jpg" alt="partner-image" class="partner" />
