--- a/service.html
+++ b/service.html
@@ -159,7 +159,8 @@
 
 			<!--Service Intro-->
 			<section id="service-item-details">
-				<div class="container flex items-center justify-between">
+				<div
+					class="container flex flex-col lg:flex-row md:flex-row lg:items-center lg:justify-between">
 					<div class="image-wrapper">
 						<img src="./assets/images/single-service-image.jpg" alt="service-image" />
 					</div>
@@ -177,7 +178,8 @@
 							Velit donec quam ridiculus nullam ac nisl faucibus. Augue diam egestas hac ac
 							adipiscing elementum imperdiet suspendisse lectus.
 						</p>
-						<div class="stats flex justify-between items-start mt-6">
+						<div
+							class="stats flex flex-col lg:flex-row md:flex-row lg:justify-between md:justify-between items-start mt-6 space-y-4 lg:space-y-0 md:space-y-0">
 							<div class="stat">
 								<p class="number">100</p>
 								<p class="title">Procedures Successfully Completed</p>
@@ -193,7 +195,7 @@
 
 			<!--Service Features-->
 			<section id="service-features">
-				<div class="container flex items-center justify-between">
+				<div class="container flex flex-col lg:flex-row lg:items-center lg:justify-between">
 					<div class="intro">
 						<h2>Lorem ipsum dolor sit amet.</h2>
 						<p class="mt-2">
