--- a/about.html
+++ b/about.html
@@ -159,20 +159,22 @@
 
 			<!--About Intro-->
 			<section id="about-details">
-				<div class="container flex items-center justify-between">
+				<div
+					class="container flex flex-col lg:flex-row md:flex-row lg:items-center justify-between">
 					<div class="image-wrapper">
 						<img src="./assets/images/about images.png" alt="about-image" />
 					</div>
 					<div class="content">
 						<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
-						<h2 class="mt-2">About Equity Afia</h2>
-						<p class="mt-3">
+						<h2 class="lg:mt-2">About Equity Afia</h2>
+						<p class="lg:mt-3 mt-2">
 							We are a group of qualified and experienced doctors who have come together as a
 							network of medical entrepreneurs with the aim of providing high quality, affordable
 							and accessible healthcare to the majority of Kenyans. Meet our able team on ground to
 							serve you.
 						</p>
-						<div class="values flex items-start justify-between mt-4">
+						<div
+							class="values flex flex-col lg:flex-row md:flex-row items-start justify-between mt-4 space-y-4 lg:space-y-0 md:space-y-0">
 							<div class="value">
 								<img src="./assets/images/mission-icon.png" alt="value-image" />
 								<h6 class="mt-2 mb-1">Our Mission</h6>
@@ -202,7 +204,8 @@
 				<div class="container flex flex-col items-center">
 					<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
 					<h2 class="mt-2">Core Values</h2>
-					<div class="values-grid grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 mt-10">
+					<div
+						class="values-grid grid grid-cols-2 lg:grid-cols-4 md:grid-cols-2 gap-4 lg:gap-0 md:gap-0 mt-10">
 						<div class="value flex flex-col items-center justify-center">
 							<span>C</span>
 							<p>Caring</p>
@@ -220,7 +223,8 @@
 							<p>Mutual Respect</p>
 						</div>
 					</div>
-					<div class="values-grid grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 lg:mt-5">
+					<div
+						class="values-grid grid grid-cols-2 lg:grid-cols-4 md:grid-cols-2 gap-4 lg:gap-0 md:gap-0 lg:mt-5">
 						<div class="value flex flex-col items-center justify-center">
 							<span>P</span>
 							<p>Professional Ethics</p>
