--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
 
 			<!--Contact Form-->
 			<section id="contact-form">
-				<div class="container grid grid-cols-1 lg:grid-cols-2 lg:gap-10 gap-5">
+				<div class="container grid grid-cols-1 lg:grid-cols-2 md:grid-cols-2 lg:gap-10 gap-5">
 					<div class="content">
 						<h2>We’re Always Happy To Hear from You!</h2>
 						<p class="mt-1 lg:w-4/5">
@@ -180,7 +180,8 @@
 					</div>
 
 					<form class="ct-form">
-						<div class="input-wrapper-col-2 grid grid-cols-1 lg:grid-cols-2 lg:gap-10 gap-5 mb-3">
+						<div
+							class="input-wrapper-col-2 grid grid-cols-1 lg:grid-cols-2 md:grid-cols-2 lg:gap-10 gap-5 mb-3">
 							<div class="form-item space-y-1">
 								<label for="fname">First Name</label>
 								<input type="text" name="fname" id="fname" placeholder="John" />
@@ -190,7 +191,8 @@
 								<input type="text" name="lname" id="lname" placeholder="Doe" />
 							</div>
 						</div>
-						<div class="input-wrapper-col-2 grid grid-cols-1 lg:grid-cols-2 lg:gap-10 gap-5 mb-3">
+						<div
+							class="input-wrapper-col-2 grid grid-cols-1 lg:grid-cols-2 md:grid-cols-2 lg:gap-10 gap-5 mb-3">
 							<div class="form-item space-y-1">
 								<label for="email">Email</label>
 								<input type="email" name="email" id="email" placeholder="johndoe@gmail.com" />
@@ -223,10 +225,11 @@
 			<!--Other Services-->
 			<section id="other-locations">
 				<div class="container">
-					<div class="filter-section flex justify-between items-end">
+					<div
+						class="filter-section flex flex-col lg:flex-row md:flex-row lg:justify-between md:justify-between lg:items-end">
 						<h2>Other Locations</h2>
 
-						<div class="filter-items flex items-center">
+						<div class="filter-items flex flex-col lg:flex-row lg:items-center">
 							<form class="lg:mr-4 mr-2">
 								<input type="search" name="search" id="search" placeholder="Search..." />
 							</form>
