--- a/about.html
+++ b/about.html
@@ -159,8 +159,7 @@
 
 			<!--About Intro-->
 			<section id="about-details">
-				<div
-					class="container flex flex-col lg:flex-row md:flex-row lg:items-center justify-between">
+				<div class="container flex flex-col lg:flex-row lg:items-center justify-between">
 					<div class="image-wrapper">
 						<img src="./assets/images/about images.png" alt="about-image" />
 					</div>
@@ -205,7 +204,7 @@
 					<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
 					<h2 class="mt-2">Core Values</h2>
 					<div
-						class="values-grid grid grid-cols-2 lg:grid-cols-4 md:grid-cols-2 gap-4 lg:gap-0 md:gap-0 mt-10">
+						class="values-grid grid grid-cols-2 lg:grid-cols-4 md:grid-cols-4 gap-4 lg:gap-0 md:gap-0 mt-10">
 						<div class="value flex flex-col items-center justify-center">
 							<span>C</span>
 							<p>Caring</p>
@@ -224,7 +223,7 @@
 						</div>
 					</div>
 					<div
-						class="values-grid grid grid-cols-2 lg:grid-cols-4 md:grid-cols-2 gap-4 lg:gap-0 md:gap-0 lg:mt-5">
+						class="values-grid grid grid-cols-2 lg:grid-cols-4 md:grid-cols-4 gap-4 lg:gap-0 md:gap-0 lg:mt-5">
 						<div class="value flex flex-col items-center justify-center">
 							<span>P</span>
 							<p>Professional Ethics</p>
@@ -246,7 +245,7 @@
 			</section>
 
 			<!--Approach Section-->
-			<section id="approach" class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1">
+			<section id="approach" class="grid lg:grid-cols-2 grid-cols-1">
 				<div class="image-wrapper">
 					<img src="./assets/images/new-mother-img.jfif" alt="approach-image" />
 				</div>
