--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
 
 			<!--Contact Form-->
 			<section id="contact-form">
-				<div class="container grid grid-cols-1 lg:grid-cols-2 md:grid-cols-2 lg:gap-10 gap-5">
+				<div class="container grid grid-cols-1 lg:grid-cols-2 lg:gap-10 gap-5">
 					<div class="content">
 						<h2>We’re Always Happy To Hear from You!</h2>
 						<p class="mt-1 lg:w-4/5">
