--- a/locations.html
+++ b/locations.html
@@ -227,7 +227,7 @@
 			<section id="location-services">
 				<div class="container">
 					<div
-						class="title w-full flex flex-col lg:flex-row md:flex-row lg:items-center lg:justify-between mb-4">
+						class="title w-full flex flex-col lg:flex-row lg:items-center lg:justify-between mb-4">
 						<div class="content space-y-2">
 							<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
 							<h2>Our Services</h2>
@@ -411,7 +411,7 @@
 			<section id="wellness">
 				<div class="container">
 					<div
-						class="title w-full flex flex-col lg:flex-row md:flex-row lg:items-center lg:justify-between mb-4">
+						class="title w-full flex flex-col lg:flex-row lg:items-center lg:justify-between mb-4">
 						<div class="content space-y-2">
 							<h2>Health & Wellness Tips</h2>
 							<p>
@@ -466,10 +466,8 @@
 			</section>
 
 			<!--Location Map Section-->
-			<section
-				id="location-map"
-				class="flex flex-col lg:flex-row md:flex-row items-start justify-between">
-				<div class="content w-full lg:w-1/2 md:w-1/2">
+			<section id="location-map" class="flex flex-col lg:flex-row items-start justify-between">
+				<div class="content w-full lg:w-1/2">
 					<h5>QUALITY AFFORDABLE HEALTHCARE FOR ALL</h5>
 					<h2 class="mt-1">Our Locations in Kenya</h2>
 					<p class="mt-1">
@@ -478,12 +476,12 @@
 					</p>
 
 					<div
-						class="filter-items flex flex-col lg:flex-row md:flex-row lg:items-center md:items-center justify-between lg:mt-8 mt-4">
+						class="filter-items flex flex-col lg:flex-row lg:items-center lg:justify-between lg:mt-8 mt-4">
 						<form class="lg:mr-4 mr-2">
 							<input type="search" name="search" id="search" placeholder="Search..." />
 						</form>
 
-						<div class="items flex items-center justify-between lg:justify-start">
+						<div class="items flex items-center justify-between lg:justify-start md:justify-start">
 							<span class="item flex items-center">
 								<p class="mr-2">By Countries</p>
 								<i class="fas fa-angle-down"></i>
@@ -654,7 +652,7 @@
 					</div>
 				</div>
 
-				<div class="map w-full lg:w-1/2 md:w-1/2">
+				<div class="map w-full lg:w-1/2">
 					<img src="./assets/images/locations-map.png" alt="map-image" />
 				</div>
 			</section>
@@ -663,7 +661,7 @@
 			<section id="how-to-pay">
 				<div class="container">
 					<div
-						class="title w-full flex flex-col lg:flex-row md:flex-row lg:items-center lg:justify-between lg:mb-8 mb-5">
+						class="title w-full flex flex-col lg:flex-row lg:items-center lg:justify-between lg:mb-8 mb-5">
 						<div class="content space-y-2">
 							<h2>Pay Your Way</h2>
 							<p>payment options for services received at Equity Afia medical centres in Kenya.</p>
