--- a/service.html
+++ b/service.html
@@ -159,8 +159,7 @@
 
 			<!--Service Intro-->
 			<section id="service-item-details">
-				<div
-					class="container flex flex-col lg:flex-row md:flex-row lg:items-center lg:justify-between">
+				<div class="container flex flex-col lg:flex-row lg:items-center lg:justify-between">
 					<div class="image-wrapper">
 						<img src="./assets/images/single-service-image.jpg" alt="service-image" />
 					</div>
