--- a/services.html
+++ b/services.html
@@ -160,15 +160,14 @@
 			<!--Services Content-->
 			<section id="services-content">
 				<div class="container">
-					<div
-						class="filter-section flex flex-col lg:flex-row md:flex-row justify-between lg:items-end">
+					<div class="filter-section flex flex-col lg:flex-row justify-between lg:items-end">
 						<p class="intro">
 							Lorem ipsum dolor sit amet consectetur. At faucibus eget convallis habitasse luctus.
 							Velit donec quam ridiculus nullam ac nisl faucibus. Augue diam egestas hac ac
 							adipiscing elementum imperdiet suspendisse lectus.
 						</p>
 
-						<div class="filter-items flex flex-col lg:flex-row lg:items-center md:items-center">
+						<div class="filter-items flex flex-col lg:flex-row lg:items-center">
 							<h6 class="lg:mr-12 md:mr-6 mr-0">Filter By</h6>
 							<div class="items flex items-center">
 								<span class="item flex items-center">
