career popup sample added

--- a/careers.html
+++ b/careers.html
@@ -12,6 +12,34 @@
 		<title>Equity Afia</title>
 	</head>
 	<body>
+        <!-- Popup Modal -->
+        <div class="modal-overlay" id="job-modal">
+            <div class="modal-content">
+                <span class="close-modal"><img src="./assets/images/close.png" alt="close" class="h-6 w-6 object-contain"></span>
+                <div class="modal-header">
+                    <h2>Community Oral Health Officer (COHO)</h2>
+                </div>
+                <div class="modal-body">
+                    <div class="job-details flex items-center space-x-3 lg:space-x-5">
+                        <span class="flex items-center space-x-1"><img src="./assets/images/location-icon.png" alt="location-icon" class="h-auto w-auto object-contain"><p>Kenya, Ruiru</p></span>
+                        <span class="flex items-center space-x-1"><img src="./assets/images/location-icon.png" alt="location-icon" class="h-auto w-auto object-contain"><p>12th May 2025</p></span>
+                    </div>
+                
+                    <h4 class="mt-4 lg:mt-6 md:mt-5">Qualifications</h4>
+                    <div class="qualifications mt-2">
+                        <span class="flex items-center space-x-2"><img src="./assets/images/arrow-right-accent.png" alt="" class="w-auto h-auto object-contain mr-2"> Diploma or Bachelor's degree in Marketing or equivalent</span>
+                        <span class="flex items-center space-x-2"><img src="./assets/images/arrow-right-accent.png" alt="" class="w-auto h-auto object-contain mr-2"> At least two (2) years working experience in aggressive marketing and sales.</span>
+                        <span class="flex items-center space-x-2"><img src="./assets/images/arrow-right-accent.png" alt="" class="w-auto h-auto object-contain mr-2"> Experience gained from Hospitals, Pharmaceutical and Insurance will have an added advantage.</span>
+                        <span class="flex items-center space-x-2"><img src="./assets/images/arrow-right-accent.png" alt="" class="w-auto h-auto object-contain mr-2"> Proficiency in Microsoft Office Suite.</span>
+                        <span class="flex items-center space-x-2"><img src="./assets/images/arrow-right-accent.png" alt="" class="w-auto h-auto object-contain mr-2"> Customer service oriented</span>
+                    </div>
+                
+                    <h4 class="mt-3 mb-2">How To Apply</h4>
+                    <p>If you match the above qualifications, send your CV, cover letter and copies of your professional and academic certificates to <span class="underline">EQATaveta.recruitment@equityafya.co.ke</span> quoting the <span>location</span> and <span>position</span> you are applying for on the email subject on or before <span>15th June 2025</span>. Shortlisting will be done on a rolling basis.</p>
+                    </div>
+            </div>
+        </div>
+
 		<!--Accesibility Button-->
 		<button id="accesibility-btn">
 			<img src="./assets/images/accesibility icon.png" alt="accesibility-icon" />
@@ -234,6 +262,7 @@
 				<div class="container">
 					<h2>A Glimpse of Equity Afia Work Life</h2>
 					<p class="lg:mt-4 mt-2">Lorem ipsum dolor sit amet consectetur. Orci adipiscing mi facilisi augue diam. Feugiat facilisi habitant quis tincidunt. Auctor at consectetur a neque aliquam. Aliquet eu tellus vestibulum tempus tortor proin. Enim blandit sem arcu sed neque nisl massa elit. Lorem neque eros dolor vitae feugiat egestas diam bibendum. Sit tortor non sit condimentum egestas quis vitae mi erat. Congue habitant elementum ornare consectetur. Vitae facilisi elit volutpat faucibus tristique sagittis. Molestie felis maecenas quam sodales vel quam ullamcorper eget.</p>
+                    <button id="more" class="btn-learn-more mt-4 lg:mt-5">Learn More</button>
 				</div>
 			</section>
 
