--- a/locations.html
+++ b/locations.html
@@ -765,7 +765,7 @@
         <img
           src="./assets/images/location-cta-image.jpg"
           alt="footer-bg-image"
-          class="bg-image absolute top-0 left-0 w-full h-full"
+          class="bg-image absolute top-0 left-0"
         />
         <div class="overlay absolute top-0 left-0 w-full h-full"></div>
 
