table on article page fixed

--- a/contact.html
+++ b/contact.html
@@ -295,17 +295,17 @@
               </form>
 
               <div class="items flex items-center">
-                <span class="item flex items-center">
+                <button class="item flex items-center">
                   <p class="mr-2">Country</p>
                   <i class="fas fa-angle-down"></i>
-                </span>
-                <span class="item flex items-center mx-3">
+                </button>
+                <button class="item flex items-center mx-3">
                   <p class="mr-2">County</p>
                   <i class="fas fa-angle-down"></i>
-                </span>
-                <span class="item flex items-center">
+                </button>
+                <button class="item flex items-center">
                   <p>Filter</p>
-                </span>
+                </button>
               </div>
             </div>
           </div>
