--- a/locations.html
+++ b/locations.html
@@ -603,6 +603,7 @@
             at. Ultricies porttitor
           </p>
 
+          <!--Filter Section-->
           <div
             class="filter-items flex flex-col lg:flex-row lg:items-center lg:justify-between lg:mt-8 mt-4"
           >
@@ -615,20 +616,21 @@
               />
             </form>
 
+            <!--Filter Items-->
             <div
               class="items flex items-center justify-between lg:justify-start md:justify-start"
             >
-              <span class="item flex items-center">
+              <button class="item flex items-center">
                 <p class="mr-2">By Countries</p>
                 <i class="fas fa-angle-down"></i>
-              </span>
-              <span class="item flex items-center lg:mx-3 md:mx-1">
+              </button>
+              <button class="item flex items-center lg:mx-3 md:mx-1">
                 <p class="mr-2">By Service</p>
                 <i class="fas fa-angle-down"></i>
-              </span>
-              <span class="item flex items-center">
+              </button>
+              <button class="item flex items-center">
                 <p>Filter</p>
-              </span>
+              </button>
             </div>
           </div>
 
