contact and location search forms updated

--- a/locations.html
+++ b/locations.html
@@ -607,37 +607,42 @@
           <div
             class="filter-items flex flex-col lg:flex-row lg:items-center lg:justify-between lg:mt-8 mt-4"
           >
-            <form class="lg:mr-4 mr-2">
+            <form
+              class="flex flex-col lg:flex-row md:flex-row lg:items-center md:items-center lg:justify-between md:justify-between lg:gap-2 md:gap-2 gap-2 w-full"
+            >
+              <!--Search Input-->
               <input
                 type="search"
                 name="search"
                 id="search"
                 placeholder="Search..."
               />
+
+              <!--Filter Items-->
+              <div
+                class="items flex flex-wrap items-center justify-between gap-2 lg:justify-start md:justify-start"
+              >
+                <select class="item countries">
+                  <option value="" selected disabled hidden>
+                    By Countries
+                  </option>
+                  <!-- Add your country options here -->
+                  <option value="us">United States</option>
+                  <option value="uk">United Kingdom</option>
+                </select>
+
+                <select class="item services">
+                  <option value="" selected disabled hidden>By Service</option>
+                  <!-- Add your service options here -->
+                  <option value="service1">Service 1</option>
+                  <option value="service2">Service 2</option>
+                </select>
+
+                <button class="item flex items-center">
+                  <p>Filter</p>
+                </button>
+              </div>
             </form>
-
-            <!--Filter Items-->
-            <div
-              class="items flex items-center justify-between lg:justify-start md:justify-start"
-            >
-              <select class="item countries">
-                <option value="" selected disabled hidden>By Countries</option>
-                <!-- Add your country options here -->
-                <option value="us">United States</option>
-                <option value="uk">United Kingdom</option>
-              </select>
-
-              <select class="item services lg:mx-3 md:mx-1">
-                <option value="" selected disabled hidden>By Service</option>
-                <!-- Add your service options here -->
-                <option value="service1">Service 1</option>
-                <option value="service2">Service 2</option>
-              </select>
-
-              <button class="item flex items-center">
-                <p>Filter</p>
-              </button>
-            </div>
           </div>
 
           <!--Location Grid (Hardcoded)-->
