contact and location responsiveness issue fixed

--- a/contact.html
+++ b/contact.html
@@ -300,7 +300,7 @@
 
                 <!--Filter Items-->
                 <div
-                  class="items flex flex-wrap items-center justify-between gap-2 lg:justify-start md:justify-start"
+                  class="items flex flex-col lg:flex-row flex-wrap lg:items-center gap-2 lg:justify-start md:justify-start"
                 >
                   <select class="item countries">
                     <option value="" selected disabled hidden>
@@ -329,7 +329,7 @@
           </div>
 
           <div
-            class="locations grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 lg:gap-4 gap-2"
+            class="locations relative grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 lg:gap-4 gap-2"
           >
             <div class="location flex flex-col lg:mt-6 mt-4">
               <h6>Mwiki</h6>
