--- a/locations.html
+++ b/locations.html
@@ -620,7 +620,7 @@
 
               <!--Filter Items-->
               <div
-                class="items flex flex-wrap items-center justify-between gap-2 lg:justify-start md:justify-start"
+                class="items flex flex-col flex-wrap lg:flex-row lg:items-center gap-2 lg:justify-start"
               >
                 <select class="item countries">
                   <option value="" selected disabled hidden>
@@ -638,7 +638,7 @@
                   <option value="service2">Service 2</option>
                 </select>
 
-                <button class="item flex items-center">
+                <button class="item flex items-center justify-center">
                   <p>Filter</p>
                 </button>
               </div>
